; ModuleID = '/home/carl/AnghaBench/linux/drivers/pinctrl/extr_pinctrl-sx150x.c_sx150x_reset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pinctrl/extr_pinctrl-sx150x.c_sx150x_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sx150x_pinctrl = type { %struct.TYPE_6__*, i32 }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@SX150X_789_RESET_KEY1 = common dso_local global i32 0, align 4
@SX150X_789_RESET_KEY2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sx150x_pinctrl*)* @sx150x_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sx150x_reset(%struct.sx150x_pinctrl* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sx150x_pinctrl*, align 8
  %4 = alloca i32, align 4
  store %struct.sx150x_pinctrl* %0, %struct.sx150x_pinctrl** %3, align 8
  %5 = load %struct.sx150x_pinctrl*, %struct.sx150x_pinctrl** %3, align 8
  %6 = getelementptr inbounds %struct.sx150x_pinctrl, %struct.sx150x_pinctrl* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load %struct.sx150x_pinctrl*, %struct.sx150x_pinctrl** %3, align 8
  %9 = getelementptr inbounds %struct.sx150x_pinctrl, %struct.sx150x_pinctrl* %8, i32 0, i32 0
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @SX150X_789_RESET_KEY1, align 4
  %16 = call i32 @i2c_smbus_write_byte_data(i32 %7, i32 %14, i32 %15)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %1
  %20 = load i32, i32* %4, align 4
  store i32 %20, i32* %2, align 4
  br label %35

21:                                               ; preds = %1
  %22 = load %struct.sx150x_pinctrl*, %struct.sx150x_pinctrl** %3, align 8
  %23 = getelementptr inbounds %struct.sx150x_pinctrl, %struct.sx150x_pinctrl* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = load %struct.sx150x_pinctrl*, %struct.sx150x_pinctrl** %3, align 8
  %26 = getelementptr inbounds %struct.sx150x_pinctrl, %struct.sx150x_pinctrl* %25, i32 0, i32 0
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @SX150X_789_RESET_KEY2, align 4
  %33 = call i32 @i2c_smbus_write_byte_data(i32 %24, i32 %31, i32 %32)
  store i32 %33, i32* %4, align 4
  %34 = load i32, i32* %4, align 4
  store i32 %34, i32* %2, align 4
  br label %35

35:                                               ; preds = %21, %19
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @i2c_smbus_write_byte_data(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
